Updated from VM tutorial June 2017 feedback.

--- a/tutorial/bg_info/tutorial_julesrose/index.html
+++ b/tutorial/bg_info/tutorial_julesrose/index.html
@@ -96,6 +96,32 @@
 
 
         </div>
+        <div class="well">
+
+          <h3>Change of email address</h3>
+          <p>Users are not able to change their email address directly for their Met Office Shared Repository Service (MOSRS).
+             If you need to change your email address for any reason then please <a href="https://code.metoffice.gov.uk/trac/admin/newticket?type=account-admin">open a ticket</a> in the admin Trac environment to request this.
+          </p>
+          <h3>Mailing Lists</h3>
+          <p>
+             jules-users@reading.ac.uk is a list for all users of JULES. Please use this list to ask a science questions to the community.
+          </p>
+          <p>
+jules@reading.ac.uk is for providing information to the community for example: papers, conferences, code release versions etc. 
+         </p>
+         <p>
+        <h4>General/sign up pages:</h4>
+        <a href="https://www.lists.rdg.ac.uk/mailman/listinfo/jules-users">jules-users</a>
+        <br/>
+        <a href="https://www.lists.rdg.ac.uk/mailman/listinfo/jules">jules</a>
+        
+        <h4>To unsubscribe:</h4>
+        <a href="https://www.lists.rdg.ac.uk/mailman/options/jules-users">jules-users</a>
+        <br/>
+        <a href="https://www.lists.rdg.ac.uk/mailman/options/jules/">jules</a>
+
+
+        </div>
 
             <hr/>
             <div class="container-fluid text-center">
