Adding and updating MONSooN advice.

--- a/tutorial/bg_info/tutorial_julesrose/jr_monsoon_setup.html
+++ b/tutorial/bg_info/tutorial_julesrose/jr_monsoon_setup.html
@@ -42,6 +42,7 @@
                                     <li><a href="#ia">Internal Access</a></li>
                                     <li><a href="#gas">General Access Setup</a></li>
                                     <li><a href="#sam">Simple Access to MONSooN</a></li>
+                                    <li><a href="#mma">MONSooN Mac Advice</a></li>
                             </ul>
                         <li class="dropdown">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Other material <span class="caret"></span></a>
@@ -83,6 +84,7 @@
                 <li><a href="#ia">Internal Access</a></li>
                 <li><a href="#gas">General Access Setup</a></li>
                 <li><a href="#sam">Simple Access to MONSooN</a></li>
+                <li><a href="#mma">MONSooN Mac Advice</a></li>
             </ul>
 
         </div>
@@ -357,6 +359,25 @@ prefixes-ws-default=u
                    Go live was March 2017, please be patient while I am working
                    with the MONSooN team to provide simple access instructions
                    for running JULES on MONSooN.
+                <br/>UPDATE: there is a developers group for testing code changes, Douglas Clark is a PI. However, at present there is still no JULES suites group for running Science, but it is being investigated (July 2017).
+           </p>
+
+            </div>
+
+            <div class="container">
+            </div>
+        <div class="well">
+                <br/>
+                <h2><a id="mma">MONSooN Mac Advice</a></h2>
+                <br/>
+                <br/>
+                <p>
+                   For running JULES-Rose on MONSooN via Mac OS please make sure you have an X11 emulator installed on the Mac.
+               <br/>
+                  Download and install the following package:
+                 <a href="https://www.xquartz.org/">XQuartz</a>
+               <br/>Restart your Mac.
+               <br/>Re-loggin into <code>lander</code> and <code>exvmsrose</code> using the <code>-Y</code> option, Rose and Cylc GUI's should now work.
            </p>
 
             </div>
