Update module leaders.

--- a/tutorial/bg_info/tutorial_julesrose/jr_developer.html
+++ b/tutorial/bg_info/tutorial_julesrose/jr_developer.html
@@ -203,8 +203,8 @@ fcm-make task  =&gt;  JULES configurations either  =&gt;  netcdf comparison task
               </tr>
               <tr>
                 <td>Vegetation</td>
-                <td>Anna Harper, Lina Mercado and Karina Williams</td>
-                <td>a.harper@exeter.ac.uk, l.mercado@exeter.ac.uk and karina.williams@metoffice.gov.uk </td>
+                <td>Anna Harper and Lina Mercado</td>
+                <td>a.harper@exeter.ac.uk and l.mercado@exeter.ac.uk</td>
               </tr>
               <tr>
                 <td>Biochemistry</td>
