Broken links fixed.

--- a/tutorial/bg_info/tutorial/fcm_fundamentals.html
+++ b/tutorial/bg_info/tutorial/fcm_fundamentals.html
@@ -766,8 +766,8 @@ Checked out revision 3.
       <h1 id="trepo">Setting-up the tutorial repositories</h1>
       <ul>
          <div class="well">
-            <p>Please run the following <a href="./repos/tutorial_repo_setup">tutorial repositories script</a> by running the following command in a terminal 
-               <code>~/kerryday/fcm_tutorial_docs/bootstrap/docs/repos/tutorial_repo_setup</code>
+            <p>Please run the following <a href="./repos/tutorial_repo_setup">tutorial repositories script</a> by saving the file and moving it to a appropriate directory and running the following command in a terminal from that directory: 
+               <code>tutorial_repo_setup </code>
                this will set-up the repositories that you will need for all of the tutorials.
                <strong> WARNING: This script adds and creates if required keywords the 
                file ~/.metomi/fcm/keywords.cfg if the file already exists it copies the 
