--- a/tutorial/bg_info/tutorial_julesrose/jr_user.html
+++ b/tutorial/bg_info/tutorial_julesrose/jr_user.html
@@ -118,14 +118,14 @@
       Ideally the tutorial would be completed in its designed order and in full
       and therefore used in the following order:
       <ul>
-      <li><a href="jr_users.html">Users tutorial and practical's</a>
+      <li><a href="jr_user.html">Users tutorial and practical's</a>
       , pre-quiz section - this can be considered the starting point.</li>
       <li><a href="precourse_quiz.html">Pre-course Quiz</a> - a quiz to
       help you consider how you view your present understanding.</li>
-      <li><a href="jr_users.html">Users tutorial and practical's</a>
+      <li><a href="jr_user.html">Users tutorial and practical's</a>
       , post-quiz section - background, basic principles and some best working
        practices, introducing FCM, Rose, Cylc, rose-stem etc.</li>
-      <li><a href="users_quiz.html">Users Quiz</a> testing your 
+      <li><a href="user_quiz.html">Users Quiz</a> testing your 
       learning from the Users course.</li>
       <li><a href="jr_developer.html">Developer tutorial and practical's</a>
       - this section is intended to provide the developer users information
