Update index file to include full target file

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="content">
             <h2>User Guide</h2>
             <ul>
-                <li><a href="vn5.4">vn5.4 (latest)</a></li>
+                <li><a href="vn5.4/index.html">vn5.4 (latest)</a></li>
                 <li><a href="vn5.3">vn5.3</a></li>
                 <li><a href="vn5.2">vn5.2</a></li>
                 <li><a href="vn5.1">vn5.1</a></li>
