Add comment marker

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <div class="content">
             <h2>User Guide</h2>
             <ul>
+                <!--LOCATION FOR AUTOMATIC UPDATING-->
                 <li><a href="vn5.4">Latest</a></li>
                 <li><a href="vn5.4">vn5.4</a></li>
                 <li><a href="vn5.3">vn5.3</a></li>
