--- a/vn7.2/release_notes/JULES7-2.html
+++ b/vn7.2/release_notes/JULES7-2.html
@@ -63,7 +63,7 @@
 <li><p>Removed a redundant print statement from the urban code. (#1367)</p></li>
 <li><p>Updated CABLE (as part of consolidating CABLE across its main applications, ACCESS-CM2, ESM1.5 and CABLE standalone), also corrected an inconsistency in the order of arguments for a few subroutines. (#1373)</p></li>
 <li><p>Increase compile-time checking with Cray’s CCE. (#1061)</p></li>
-<li><p>Updated configuration for NIWA. (#1387)</p></li>
+<li><p>Updated configuration at NIWA. (#1387)</p></li>
 </ul>
 </div></blockquote>
 </section>
