Normal behaviour description added plus amended other text to include troubleshooting advice

--- a/access_req/JULES_access.html
+++ b/access_req/JULES_access.html
@@ -54,7 +54,14 @@
                  Any information supplied will be used in accordance with the <a href="http://www.metoffice.gov.uk/about-us/legal/tandc">Met Office privacy policy</a>.
                </p>
                <br/>
-               <p>PLEASE NOTE: It can take up to about 2 weeks for requests to be completed and access give. You will receive an email on completion.
+
+	       <p>Once the form is submitted, the form will open an email with the required information in a string resembling the following:</p>
+
+	       <p>firstname=Firstname&surname=Surname&mail=email%40institution.ac&phone=%2B00+0000+000000&institution=Institution+addess&use=My+JULES+use+will+be...&checkbox=check&submit=Send+Request </p>
+	       <p>Please send the email. If the email fails to open, contact jules-support@metoffice.gov.uk for advice. </p>
+               <br/>
+
+               <p>PLEASE NOTE: It can take up to two weeks for requests to be completed and access given. You will receive an email upon completion. If you have not received confirmation within this time, please check your junk mail/ spam folder before contacting jules-support@metoffice.gov.uk.
                </p>
                </br>
                <form action="mailto:Jules-Support@metoffice.gov.uk?Subject=JULES%20Account%20Request" method="post" entype="multipart/form-data" onsubmit="if(document.getElementById('agree').checked) { return true; } else { alert('Please indicate that you have read and agree to the JULES Terms and Conditions'); return false; }" >
